# ruzer

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
assets/icons/: LICENSES
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/driver/: Cargo.toml
crates/driver/src/: batched.rs  chroma.rs  common.rs  devices.rs  lib.rs
crates/driver_macros/: Cargo.toml
crates/driver_macros/src/: lib.rs
crates/ruzer/: Cargo.toml
crates/ruzer/src/: device_list.rs  device_page.rs  home_page.rs  main.rs
crates/ruzer/src/device_page/: dpi_stages.rs
