[workspace]
members = [
    "crates/cli",
    "crates/driver",
    "crates/driver_macros",
    "crates/ruzer",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Internal
cli = { path = "crates/cli" }
driver = { path = "crates/driver" }
driver_macros = { path = "crates/driver_macros" }

# External
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
convert_case = { version = "0.7" }
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
relm4 = { version = "0.9.1", features = ["libadwaita"] }
relm4-components = "0.9.1"
nusb = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
tokio = { version = "1.43", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
zerocopy = { version = "0.8", features = ["derive"] }
