[package]
name = "driver"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
# Internal
driver_macros = { workspace = true }

# External
anyhow = { workspace = true }
async-trait = { workspace = true }
nusb = { workspace = true }
tokio = { workspace = true }
zerocopy = { workspace = true }
