[package]
name = "ruzer"
version = "0.1.0"
edition = { workspace = true }
default-run = "ruzer"

[dependencies]
# Internal
driver = { workspace = true }

# External
adw = { workspace = true }
gtk = { workspace = true }
nusb = { workspace = true }
relm4 = { workspace = true }
relm4-components = { workspace = true }
